# ai-agents-google-expriment

./: .env.example  .env.local.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  PHASE_2_PLAN.md  PROJECT_SUMMARY.md  README.md  firebase.json  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
agents/: __init__.py  analyzer_agent.py  base_agent.py  orchestrator_agent.py  researcher_agent.py
app/: layout.tsx  page.tsx
app/(auth)/login/: page.tsx
app/(auth)/signup/: page.tsx
app/(dashboard)/notes/: page.tsx
app/api/media/ocr/: route.ts
app/api/media/transcribe/: route.ts
app/api/notes/: route.ts
app/api/notes/[id]/: route.ts
components/layout/: footer.tsx  header.tsx
components/notes/: audio-recorder.tsx  create-note-dialog.tsx  create-note-multi.tsx  delete-note-dialog.tsx  edit-note-dialog.tsx  image-capture.tsx  note-card.tsx  tiptap-editor.tsx  video-recorder.tsx
components/providers/: auth-provider.tsx
components/ui/: toaster.tsx
config/: agent_config.yaml  deployment.yaml  prompts.yaml
deploy/: Dockerfile  cloudbuild.yaml  deploy.sh
examples/: multi_agent_demo.py  simple_agent.py
firebase/: firestore.indexes.json  firestore.rules  storage.rules
hooks/: use-auth.ts  use-notes.ts  use-sync.ts
lib/ai/: gemini.ts
lib/db/: offline-db.ts
lib/firebase/: auth.ts  config.ts  notes.ts
lib/google-apis/: speech-to-text.ts  vision.ts
lib/sync/: sync-manager.ts
lib/utils/: media-upload.ts
public/: manifest.json
store/: auth-store.ts  notes-store.ts  sync-store.ts  ui-store.ts
tests/: __init__.py  test_agents.py  test_integration.py  test_tools.py
tools/: __init__.py  code_executor.py  file_manager.py  web_search.py
types/: index.ts
